--- a/index.html
+++ b/index.html
@@ -23,5 +23,8 @@
     /* custom configuration goes here (www.olark.com/documentation) */
     olark.identify('1269-485-10-2928');/*]]>*/</script><noscript><a href="https://www.olark.com/site/1269-485-10-2928/contact" title="Contact us" target="_blank">Questions? Feedback?</a> powered by <a href="http://www.olark.com?welcome" title="Olark live chat software">Olark live chat software</a></noscript>
     <!-- end olark code -->
+    <script>
+      olark('api.visitor.updateCustomFields', { userId: 1 });
+    </script>
   </body>
 </html>
